--- a/main.css
+++ b/main.css
@@ -371,7 +371,7 @@ textarea {
   font-family: 'Black Ops One';
   font-style: normal;
   font-weight: 400;
-  src: local("Black Ops One"), local("BlackOpsOne-Regular"), url("./assets/BlackOpsOne.woff") format("woff"); }
+  src: local("Black Ops One"), local("BlackOpsOne-Regular"), url("/assets/BlackOpsOne.woff") format("woff"); }
 
 .pp-score_add, .pp-score_remove, .pp-reset_button {
   outline: none; }
